--- a/app/assets/stylesheets/trends.scss
+++ b/app/assets/stylesheets/trends.scss
@@ -5,6 +5,8 @@
 .cards {
   display:flex;
   justify-content:center;
+  margin: 50px 0px;
+
 }
 
 
@@ -16,16 +18,29 @@
 .cards-text-principal {
   display:flex;
   justify-content: space-between;
+  align-items:flex-start;
 }
 
 
 .cards-textbox {
-  width : 40%;
-  height : 700px;
-  margin: 0% 5%;
-  padding : 3% 5% ;
+
+  width:500px;
+  margin: 0% 10%;
+  padding : 8% 10% ;
   background-color: white;
   box-shadow: -10px 5px 5px rgba(128,128,128,0.1);
   border-radius : 40px;
-  border: solid rgba(128,128,128,0.05) ;
+  border: solid rgba(127,128,128,0.05) ;
+}
+
+
+
+
+
+
+
+.field-container{
+  flex-direction: column;
+  display:flex;
+  justify-content:center;
 }
